--- a/ExpenseReport/res/values/strings.xml
+++ b/ExpenseReport/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="button_send">Send</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="login_screen">Login</string>
 </resources>
