--- a/ExpenseReport/res/values/strings.xml
+++ b/ExpenseReport/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">My First App</string>
-    <string name="edit_message">Enter a message</string>
-    <string name="button_send">Send</string>
+    <string name="app_name">Expense Report</string>
+    <string name="edit_message">Type here</string>
+    <string name="button_login">Login</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="login_screen">Login</string>
